# monad-the-gathering

./: CHANGELOG.md  README.md  monad-the-gathering.cabal
app/: Main.hs
src/: MonadTheGathering.hs
